# kimbo-terminal

./: .editorconfig  .gitignore  AppIcon.icns  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.browser.config.ts
.github/workflows/: ci.yml
crates/kimbo-claude-statusline/: Cargo.toml
crates/kimbo-claude-statusline/src/: lib.rs  main.rs
crates/kimbo-claude-statusline/tests/: integration.rs
crates/kimbo-config/: Cargo.toml
crates/kimbo-config/src/: community.rs  config.rs  keybindings.rs  lib.rs  theme.rs  watcher.rs
crates/kimbo-config/src/themes/: kimbo-dark.json  kimbo-light.json
crates/kimbo-terminal/: Cargo.toml
crates/kimbo-terminal/src/: claude_probe.rs  claude_session.rs  lib.rs  terminal.rs
crates/kimbo-terminal/tests/: pty_test.rs
crates/kimbo-workspace/: Cargo.toml
crates/kimbo-workspace/src/: detector.rs  lib.rs  profile.rs
docs/: themes.md
docs/design/: 2026-04-21-osc1337-inline-images-plan.md  2026-04-21-osc1337-inline-images.md
docs/design/kimbo-handoff/: README.md
docs/design/kimbo-handoff/chats/: chat1.md
docs/design/kimbo-handoff/project/: Kimbo Redesign.html
docs/design/kimbo-handoff/project/src/: app.jsx  chrome.jsx  icons.jsx  palette.jsx  settings.jsx  terminal.jsx  tweaks.jsx
docs/design/kimbo-handoff/project/styles/: app.css  themes.css
docs/kimbo-themes-repo/: README.md
scripts/: build-dmg.sh  gen-app-icons.sh  homebrew-formula.rb  release.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/shell/: kimbo-init.bash  kimbo-init.fish  kimbo-init.zsh
src-tauri/src/: main.rs  pty_manager.rs
src-tauri/src/commands/: claude.rs  claude_rate_limits.rs  config.rs  kimbo.rs  mod.rs  pty.rs  theme.rs  update.rs  window.rs  workspace.rs
src-ui/: ansi-bg-transparent.test.ts  ansi-bg-transparent.ts  bugfixes.test.ts  claude-account.test.ts  claude-account.ts  claude-hud.test.ts  claude-hud.ts  claude-pricing.test.ts  claude-pricing.ts  claude-rate-limits.test.ts  claude-rate-limits.ts  claude-session-probe.test.ts  claude-session-probe.ts  claude-status.test.ts  claude-status.ts  close-confirm.test.ts  close-confirm.ts  closed-tabs.test.ts  closed-tabs.ts  command-palette.ts  drag-drop.test.ts  drag-drop.ts  dropdown.test.ts  dropdown.ts  find-bar.ts  icons.ts  index.html  keys.test.ts  keys.ts  kimbo-bus.test.ts  kimbo-bus.ts  kimbo-dom.test.ts  kimbo-dom.ts  kimbo-milestones.test.ts  kimbo-milestones.ts  kimbo-osc.test.ts  kimbo-osc.ts  kimbo-state.test.ts  kimbo-state.ts  kimbo.css  (+60 more)
