[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/kimbo-terminal",
    "crates/kimbo-config",
    "crates/kimbo-workspace",
    "crates/kimbo-claude-statusline",
]

[workspace.package]
version = "0.10.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/lucatescari/kimbo-terminal"
authors = ["Luca Tescari"]

[workspace.dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
notify = "7"
fuzzy-matcher = "0.3"
log = "0.4"
env_logger = "0.11"
regex = "1"
ureq = "3"
