[package]
name = "kimbo-app"
version = "0.6.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dirs = "5"
semver = "1"
ureq = "3"
kimbo-config = { path = "../crates/kimbo-config" }
kimbo-terminal = { path = "../crates/kimbo-terminal" }
kimbo-workspace = { path = "../crates/kimbo-workspace" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["term", "process"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-web-kit = { version = "0.3", default-features = false, features = [
  "WKWebView",
  "objc2-app-kit",
] }
window-vibrancy = "0.6"
