[package]
name = "kimbo-terminal"
version = "0.9.0"
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "process", "fs"] }
libc = "0.2"

[dev-dependencies]
dirs = "5"
libc = "0.2"
